# hear

./: LICENSE  README.md  hear.cabal  stack.yaml
app/: Main.hs
src/Hear/: Music.hs  RandomTones.hs  Trainer.hs
