name:                hear
version:             0.1.0.0
synopsis:            A command line ear training application
description:         Please see README.md
homepage:            http://github.com/no-scope/hear#readme
license:             BSD3
license-file:        LICENSE
author:              Vasileios Kontonis
maintainer:          vkonton@gmail.com
copyright:           2010 Vasileios Kontonis
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hear.Trainer, Hear.RandomTones, Hear.Music
  ghc-options:         -Wall -Werror -fno-warn-unused-binds
  build-depends:       base >= 4.7 && < 5
                     , Euterpea
                     , random
                     , vector
                     , split
                     , ansi-terminal
  default-language:    Haskell2010

executable hear
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/no-scope/hear
